config/samples/gateway_class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: tyk
spec:
  controllerName: buraksekili.github.com/gateway-api-controller-tyk
