config/samples/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tyk
spec:
  gatewayClassName: tyk
  listeners:
    - name: httplistener
      port: 8080
      protocol: HTTP
