config/samples/gateway_class_tyk_conf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: tykconf
spec:
  controllerName: buraksekili.github.com/gateway-api-controller-tyk
  parametersRef:
    group: gateway
    kind: GatewayConfiguration
    name: tyk-gw-oss
    namespace: tyk
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tyk-gateway
  namespace: tyk
spec:
  gatewayClassName: tykconf
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
    - name: control-port
      port: 9696
      protocol: tyk.io/control
---
