config/samples/hybrid.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: tykconf
spec:
  controllerName: buraksekili.github.com/gateway-api-controller-tyk
  parametersRef:
    group: gateway
    kind: GatewayConfiguration
    name: tyk-gw-oss
    namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tyk-gateway-hybrid
  namespace: default
spec:
  gatewayClassName: tykconf
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
---
