config/samples/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: store-routes
  namespace: tyk
spec:
  parentRefs:
    - name: tyk-gateway
  hostnames:
    - "foo.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /bar
      backendRefs:
        - name: my-service1
          port: 8080
        - name: my-service2
          port: 8080
